bakkie_derive/tests/ui/fail/tool_non_string_value.stderr
error: expected string literal
 --> tests/ui/fail/tool_non_string_value.rs:3:15
  |
3 | #[tool(name = 123)]
  |               ^^^
